...
    <string name="mainmenu_addIncome_button">Dodaj przychód</string>
    <string name="mainmenu_addExpense_button">Dodaj wydatek</string>
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
...
    <string name="finmgmt_calendar_button">Kalendarz</string>
    <string name="finmgmt_actualBudget_info_text">Aktualny budżet:</string>
    <string name="finmgmt_budgetmenu_button">Menu budżetów</string>
    <string name="finmgmt_statistics_button">Statystyki</string>
    <string name="finmgmt_transactionsList_button">Transakcje</string>
...
    <string name="budget_rc_endDate">1900-12-31</string>
    <string name="budget_rc_amountSlider">/</string>
    <string name="budget_fab_addBudget">Dodaj budżet</string>
    <string name="budget_createform_text_desc">Opis budżetu</string>
    <string name="budget_createform_submit">Utwórz budżet</string>
    <string name="budget_create_info_login">Tworzenie budżetu</string>
    <string name="budget_createform_fromDate_info">od:</string>
    <string name="budget_createform_toDate_info">do:</string>
    <string name="budget_createform_text_initialAmount">Wysokość budżetu</string>
    <string name="budget_edit_info_login">Edycja budżetu</string>
    <string name="budget_editform_text_initialAmount">Nowy budżet</string>
    <string name="budget_editform_text_desc">Nowy opis budżetu</string>
    <string name="budget_editform_submit">Edytuj budżet</string>
    <string name="budget_editform_delete">Usuń budżet</string>
    <string name="budget_delete_info">Usuwanie budżetu</string>
...
    <string name="budget_delete_fromDate_info">od:</string>
    <string name="budget_delete_toDate_info">do:</string>
    <string name="budget_delete_submit">Usuń budżet</string>
    <string name="budget_delete_info_delete">Czy na pewno chcesz usunąć ten budżet?</string>
    <string name="budget_empty_text">Jak widzisz, nie ma tutaj żadnego budżetu, stwórz go!</string>
...
    <string name="budget_delete_cont_info_delete">Co chcesz, aby stało się z transakcjami powiązanymi z usuwanym budżetem?</string>
    <string name="budget_delete_cont_unlinkTrans">Odepnij transakcje od budżetu</string>
    <string name="budget_delete_cont_deleteTrans">Usuń transakcje razem z budżetem</string>
    <string name="income_createform_checkbox_budgetInitialAmount">Zmienia limit budżetu</string>
    <string name="budtrans_button_edit">Edytuj budżet</string>
    <string name="budtrans_button_delete">Usuń budżet</string>
    <string name="budtrans_rc_fromDate">od:</string>
    <string name="budtrans_rc_startDate">1900-01-01</string>
...
    <string name="budtrans_rc_amountSlider">/</string>
    <string name="budtrans_rc_currency">PLN</string>
    <string name="title_activity_budgettransaction">Lista transakcji w budżecie</string>
    <string name="expense_edit_info_login">Edycja wydatku</string>
    <string name="expense_editform_text_value">Wartość wydatku</string>
...
    <string name="income_deleteform_cont_submitDontChange">Nie</string>
    <string name="income_deleteform_cont_spin_budget_info">Budżet:</string>
    <string name="budget_rc_desc">description</string>
    <string name="menu_sort_action_sort">Sortuj</string>
    <string name="menu_sort_action_sort_value_asc">Wartość rosnąco</string>
...
    <string name="schpay_create_transaction_confirmation_info">Czy na pewno<br /> chcesz utworzyć transakcję?</string>
    <string name="schpay_create_transaction_submit">Utwórz transakcję</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="stat_description_info">Dla jakiego okresu chcesz uzyskać dane?</string>
...
    <string name="profile_createprofile_question_error_syntax">Pytanie pomocnicze powinno składać się z co najmniej dwóch liter. Na końcu musi znajdować się znak zapytania.</string>
    <string name="profile_loginform_predelete_info_delete">Wpisz kod PIN, aby potwierdzić<br /> operację usunięcia profilu.</string>
    <string name="budget_createbudget_initialAmount_error_empty">Podaj wysokość budżetu.</string>
    <string name="budget_createbudget_date_error_startDateAfterEndDate">Data rozpoczęcia okresu rozliczeniowego nie może być późniejsza niż jego zakończenie.</string>
    <string name="budget_createbudget_date_error_startDateBeforeOtherBudgetsEndDate">Okres rozliczeniowy nie może rozpoczynać się przed zakończeniem innego okresu rozliczeniowego.</string>
    <string name="budget_createbudget_date_error_endDateWhileOtherBudgetIsRunning">Okres rozliczeniowy nie może zakończyć się w trakcie innego okresu rozliczeniowego.</string>
    <string name="budget_createbudget_date_error_otherBudgetIsExistingBetweenStartAndEndDate">Istnieje już okres rozliczeniowy pomiędzy podaną datą rozpoczęcia i zakończenia okresu rozliczeniowego.</string>
    <string name="expcat_createexpcat_name_error_empty">Podaj nazwę kategorii.</string>
    <string name="expcat_createexpcat_name_error_syntax">Nazwa kategorii powinna składać się z co najmniej dwóch liter.</string>
...
