...
            android:textStyle="bold"
            android:text="@string/budget_edit_info_login"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/budget_editform_fromDate_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="76dp"
            android:layout_below="@+id/budget_editform_info_create"
...
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/budget_editform_toDate_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/budget_editform_info_create"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="76dp"
...
