...
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/budget_createform_text_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:layout_below="@+id/budget_createform_fromDate_info"
...
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/budget_createform_text_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@+id/budget_createform_fromDate_info"
...
